--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,12 @@
 == README
 
 #Spark/Tropo Integration Server
+
 The first step is to install your own Spark/Tropo Integration Server, instructions can be found here.
 
 #Tropo Fault Reporting Server
-Create a Spark Account to use for the demo
+
+Create a Spark Account to use for the demo (any free email provider will work)
 Get the API key from developer.ciscospark.com and add it to /config/initializers/cisco_spark.rb
 On Line 65 enter the path of your web server to complete the Webhook URL
 On Line 66 enter the path of your Tropo/Spark Integration web server to complete the Webhook URL.
@@ -12,7 +14,8 @@ On 68 of Faults_Controller add the email address of your Tropo/Spark Integration
 Bundle Install and Deploy
 
 #Tropo Script
-Find the file tropofaultreport.rb in this file structure
+
+Find the file tropofaultreport.rb in this file structure (https://github.com/jfield44/TropoFaultReport/tree/master/tropo_script)
 Create a new application on Tropo.com
 Paste in the contents of tropofaultreport.rb into that script and assign a phone number
 Add your web server URL at lines 17 and 43 of the Tropo Script
