--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+Ruby on Rails 4.x > Ruby 2.0 >
+
 #Spark/Tropo Integration Server
 
 The first step is to install your own Spark/Tropo Integration Server, instructions can be found here.
